--- a/eSh/eScheme/eScheme/eScheme.vbproj
+++ b/eSh/eScheme/eScheme/eScheme.vbproj
@@ -96,6 +96,12 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="Point.Designer.vb">
+      <DependentUpon>Point.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Point.vb">
+      <SubType>UserControl</SubType>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Form1.resx">
@@ -106,6 +112,9 @@
       <LastGenOutput>Resources.Designer.vb</LastGenOutput>
       <CustomToolNamespace>My.Resources</CustomToolNamespace>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Point.resx">
+      <DependentUpon>Point.vb</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
