--- a/eSh/eScheme/eScheme/eScheme.vbproj
+++ b/eSh/eScheme/eScheme/eScheme.vbproj
@@ -73,6 +73,13 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="eComponent.vb" />
+    <Compile Include="eLine.Designer.vb">
+      <DependentUpon>eLine.vb</DependentUpon>
+    </Compile>
+    <Compile Include="eLine.vb">
+      <SubType>UserControl</SubType>
+    </Compile>
     <Compile Include="ePoint.Designer.vb">
       <DependentUpon>ePoint.vb</DependentUpon>
     </Compile>
@@ -86,7 +93,7 @@
       <DependentUpon>Form1.vb</DependentUpon>
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Interface1.vb" />
+    <Compile Include="Connectable.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
@@ -104,6 +111,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="eLine.resx">
+      <DependentUpon>eLine.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ePoint.resx">
       <DependentUpon>ePoint.vb</DependentUpon>
     </EmbeddedResource>
