--- a/eSh/eScheme/eScheme/eScheme.vbproj
+++ b/eSh/eScheme/eScheme/eScheme.vbproj
@@ -95,6 +95,12 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Connectable.vb" />
+    <Compile Include="Form2.Designer.vb">
+      <DependentUpon>Form2.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Form2.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="hLine.Designer.vb">
       <DependentUpon>hLine.vb</DependentUpon>
     </Compile>
@@ -116,6 +122,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="Removable.vb" />
     <Compile Include="vLine.Designer.vb">
       <DependentUpon>vLine.vb</DependentUpon>
     </Compile>
@@ -132,6 +139,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form2.resx">
+      <DependentUpon>Form2.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="hLine.resx">
       <DependentUpon>hLine.vb</DependentUpon>
